--- a/src/app.css
+++ b/src/app.css
@@ -1,36 +1,64 @@
 @font-face {
-	font-family: Poppins;
+	font-family: Gilroy;
+	font-style: normal;
+	font-weight: 100;
+	src: url('fonts/Gilroy-UltraLight.woff') format('woff');
+}
+
+@font-face {
+	font-family: Gilroy;
 	font-style: normal;
 	font-weight: 200;
-	src: url('fonts/Poppins-ExtraLight.ttf') format('truetype');
+	src: url('fonts/Gilroy-Light.woff') format('woff');
 }
 
 @font-face {
-	font-family: Poppins;
+	font-family: Gilroy;
+	font-style: normal;
+	font-weight: 300;
+	src: url('fonts/Gilroy-Regular.woff') format('woff');
+}
+
+@font-face {
+	font-family: Gilroy;
 	font-style: normal;
 	font-weight: 400;
-	src: url('fonts/Poppins-Regular.ttf') format('truetype');
+	src: url('fonts/Gilroy-Medium.woff') format('woff');
 }
 
 @font-face {
-	font-family: Poppins;
+	font-family: Gilroy;
+	font-style: normal;
+	font-weight: 500;
+	src: url('fonts/Gilroy-SemiBold.woff') format('woff');
+}
+
+@font-face {
+	font-family: Gilroy;
 	font-style: normal;
 	font-weight: 600;
-	src: url('fonts/Poppins-SemiBold.ttf') format('truetype');
+	src: url('fonts/Gilroy-Bold.woff') format('woff');
 }
 
 @font-face {
-	font-family: Poppins;
+	font-family: Gilroy;
+	font-style: normal;
+	font-weight: 700;
+	src: url('fonts/Gilroy-ExtraBold.woff') format('woff');
+}
+
+@font-face {
+	font-family: Gilroy;
 	font-style: normal;
 	font-weight: 800;
-	src: url('fonts/Poppins-ExtraBold.ttf') format('truetype');
+	src: url('fonts/Gilroy-Black.woff') format('woff');
 }
 
 @font-face {
-	font-family: Poppins;
+	font-family: Gilroy;
 	font-style: normal;
 	font-weight: 900;
-	src: url('fonts/Poppins-Black.ttf') format('truetype');
+	src: url('fonts/Gilroy-Heavy.woff') format('woff');
 }
 
 * {
@@ -199,8 +227,8 @@ textarea:-webkit-autofill:focus {
 html,
 body {
 	min-height: 100vh;
-	font-family: 'Poppins', sans-serif;
-	color: white !important;
+	font-family: 'Gilroy', sans-serif;
+	color: #d9d9d9;
 }
 
 address {
