--- a/src/app.css
+++ b/src/app.css
@@ -1,64 +1,64 @@
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 100;
-	src: url('fonts/Gilroy-UltraLight.woff') format('woff');
+	src: url('/fonts/Poppins-Thin.ttf');
 }
 
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 200;
-	src: url('fonts/Gilroy-Light.woff') format('woff');
+	src: url('/fonts/Poppins-ExtraLight.ttf');
 }
 
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 300;
-	src: url('fonts/Gilroy-Regular.woff') format('woff');
+	src: url('/fonts/Poppins-Light.ttf');
 }
 
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 400;
-	src: url('fonts/Gilroy-Medium.woff') format('woff');
+	src: url('/fonts/Poppins-Regular.ttf');
 }
 
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 500;
-	src: url('fonts/Gilroy-SemiBold.woff') format('woff');
+	src: url('/fonts/Poppins-Medium.ttf');
 }
 
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 600;
-	src: url('fonts/Gilroy-Bold.woff') format('woff');
+	src: url('/fonts/Poppins-SemiBold.ttf');
 }
 
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 700;
-	src: url('fonts/Gilroy-ExtraBold.woff') format('woff');
+	src: url('/fonts/Poppins-Bold.ttf');
 }
 
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 800;
-	src: url('fonts/Gilroy-Black.woff') format('woff');
+	src: url('/fonts/Poppins-ExtraBold.ttf');
 }
 
 @font-face {
-	font-family: Gilroy;
+	font-family: Poppins;
 	font-style: normal;
 	font-weight: 900;
-	src: url('fonts/Gilroy-Heavy.woff') format('woff');
+	src: url('/fonts/Poppins-Black.ttf');
 }
 
 * {
@@ -227,8 +227,8 @@ textarea:-webkit-autofill:focus {
 html,
 body {
 	min-height: 100vh;
-	font-family: 'Gilroy', sans-serif;
-	color: #d9d9d9;
+	font-family: 'Poppins', sans-serif;
+	color: #fff;
 }
 
 address {
@@ -244,7 +244,12 @@ button {
 	background-color: transparent;
 	border: none;
 	padding: 0;
-	color: #d9d9d9;
+	color: #fff;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 :not(.show-scrollbar)::-webkit-scrollbar {
